--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,16 @@
 /* ///////////////// En Commun /////////////////////*/
 
 body{
+  
   color: white;
   background-color:black;
 }
+
+/* ///////////// Bacground //////////////*/
+
+
+   
+   
 
 #rectangle {
   width: 383px;
