--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,8 @@ body{
   position: fixed;
   padding-left: 540px;
   justify-content: space-around;
+  background-color: white;
+  color: black;
 }
 
 nav ul {
@@ -32,7 +34,7 @@ nav ul {
 
 nav li a {
   text-decoration: none;
-  color: white;
+  color:black;
   text-transform: uppercase;
 }
 
